add package skeleton
readthedocs.io docs depend on requirement file

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,12 @@ skipsdist = true
 [testenv:docs]
 description = 'Generate html documentation.'
 deps =
-    sphinx==1.7.9
-    alabaster==0.7.11
+    -r{toxinidir}/dev-requirements.txt
 commands =
     - sphinx-build -b html docs/ docs/_build/
+
+[testenv:dist]
+description='Executes check and builds sdist and wheel (universal) distribution.' 
+commands=
+    python setup.py check -ms  # reST complient long string meta-data is irrelevant
+    python setup.py sdist bdist_wheel --universal
